sdlc_implementor: bug: fix text color visibility in editor

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
   min-height: 200px;
   font-size: 14px;
   line-height: 1.6;
+  color: #374151;
 }
 
 .ProseMirror p.is-editor-empty:first-child::before {
@@ -22,6 +23,7 @@
   font-weight: 700;
   margin: 0.67em 0;
   line-height: 1.2;
+  color: #1f2937;
 }
 
 .ProseMirror h2 {
@@ -29,6 +31,7 @@
   font-weight: 700;
   margin: 0.75em 0;
   line-height: 1.3;
+  color: #1f2937;
 }
 
 .ProseMirror h3 {
@@ -36,6 +39,7 @@
   font-weight: 700;
   margin: 0.83em 0;
   line-height: 1.4;
+  color: #1f2937;
 }
 
 .ProseMirror ul,
@@ -46,6 +50,11 @@
 
 .ProseMirror li {
   margin: 0.25em 0;
+  color: #374151;
+}
+
+.ProseMirror p {
+  color: #374151;
 }
 
 .ProseMirror strong {
